Archive2/c5/a6a2e3462504ae/main.cpp
#include <cmath>

int main()
{
    float y = 1.0 ;
    float x = { std::sin(  y ) } ;
    float z = { sin(  y ) } ;
}